[feat] BranchService, BranchResponse 최적화